--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -78,7 +78,7 @@
 	<a-scene id="mainscene" visible="false">
 		<a-assets>
 		
-			<img id="bg" crossorigin="anonymous" src="static/g2g2.png">
+			<img id="bg" crossorigin="anonymous" src="static/g2.jpg">
 			<img id="start" crossorigin="anonymous" src="static/start.png">
 			<img id="star" crossorigin="anonymous" src="static/star.png">
 			<img id="arrow" crossorigin="anonymous" src="static/arrow.png">
